# Agentic-Additive-Manufacturing-Alloy-Evaluation

./: .gitignore  README.md  main.py  pyproject.toml
figures/: Stainless Steel.tcu
images/figures/keyhole_conduction_mode_boundary/: keyhole_conduction_mode_regions.ipynb
results/1_submission/test_workspace/: workspace.json
results/known_alloys/SS316L_ProcessMap/: workspace.json
results/known_alloys/bronze_process_map/: workspace.json
results/known_alloys/copper_process_map/: workspace.json
results/known_alloys/hastelloy_process_map/: workspace.json
results/known_alloys/iron_process_map/: workspace.json
results/material_property_search/corrosion_resistant_alloys/: workspace.json
results/material_property_search/creep_analysis/: workspace.json
results/material_property_search/creep_resistant_alloys/: workspace.json
results/material_property_search/ductile_alloy_analysis/: workspace.json
results/material_property_search/fatigue_life_alloys/: workspace.json
results/material_property_search/fracture_toughness_study/: workspace.json
results/material_property_search/hea_printability_analysis/: workspace.json
results/material_property_search/youngs_modulus_alloy_analysis/: workspace.json
results/unknown_alloys/Al99Cu1/: workspace.json
results/unknown_alloys/Fe80Ni10Ti10_printability/: workspace.json
results/unknown_alloys/Fe95Cr5/: workspace.json
results/unknown_alloys/Fe99C1_analysis/: workspace.json
results/unknown_alloys/TiNbMoSi_experimental/: workspace.json
results/unknown_alloys/printability_analysis/: workspace.json
results/unknown_alloys/temp_composition/: workspace.json
(+206 files in other folders)
