[project]
name = "agentic-additive-manufacturing-alloy-discovery"
version = "0.0.0"
description = "Multi-agent workflow configuration for additive manufacturing alloy discovery via Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "additive-manufacturing>=0.0.14",
    "thermo-calc>=0.0.10",
    "workspace-agent>=0.0.2",
]
