[project]
name = "agentic-additive-manufacturing-alloy-discovery"
version = "0.0.0"
description = "Multi-agent workflow configuration for additive manufacturing alloy discovery via Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "additive-manufacturing>=0.0.15",
    "thermo-calc>=0.0.11",
    "workspace-agent>=0.1.4",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.3.0",
]

